--- a/client/quantidian.html
+++ b/client/quantidian.html
@@ -94,58 +94,56 @@
 </template>
 
 <template name="editor">
-  <div class="page">
-    <div class="content">
-      {{#with editor}}
-        <div>
-          <input class="categoryname" type="text" placeholder="Category Name" value="{{name}}"></input>
-        </div>
-        <div>
-          <input class="categorydesc" type="text" placeholder="Category Description" value="{{longdesc}}"></input>
-        </div>
-        <button class="addquestion btn btn-large">Add Question</button>
-        {{#each questions}}
-          {{> editorQuestion}}
-        {{/each}}
-        {{#if questions}}
-          <button class="savecategory btn btn-large btn-primary">Save</button>
-        {{/if}}
-      {{/with}}
-    </div>
-  </div>
+  {{#with editor}}
+    <p>Create a New Data Category</p>
+    <label>Category Name</label>
+    <input class="categoryname input-text" type="text" placeholder="A pithy label for this category, e.g. Mood" value="{{name}}"></input>
+
+    <label>Category Description</label>
+    <input class="categorydesc input-text" type="text" placeholder="Longer explanatory text" value="{{longdesc}}"></input>
+
+    {{#each questions}}
+      {{> editorQuestion}}
+    {{/each}}
+    <!-- FIXME: url highlighting here looks weird -->
+    <a href="#" class="addquestion action"><i class="icon-new"></i>Add Another Question</a>
+
+    {{#if questions}}
+      <!-- FIXME: this should maybe be a bottom nav item? -->
+      <button class="savecategory btn btn-block">Save</button>
+    {{/if}}
+  {{/with}}
 </template>
 
 <template name="editorQuestion">
-  <div class="editorquestion">
-    <p>Question {{num}}</p>
-    <div>
-      <input class="prompt" type="text" placeholder="Enter a prompt..." value="{{label}}"></input>
+  <div>
+    <a href="#" class="rightflushicon deletequestion action"><i class="icon-remove"></i></a>
+    <div class="shortlabel">
+      <label>Question {{num}}</label>
     </div>
+  </div>
+  <div class="inset editorquestion">
+    Optional <input type="checkbox" class="optional"></input>
+
+    <label>Question Text</label>
+    <input class="input-text prompt" type="text" placeholder="Enter a prompt" value="{{label}}"></input>
+
     <select class="type">
       {{#each questionTypes}}
         <option value="{{key}}">{{name}}</option>
       {{/each}}
     </select>
     {{#if typeIs "multiplechoice"}}
-      <button class="addchoice btn">Add Choice</button>
       {{#each choices}}
-        <div class="editorchoice" num="{{num}}">
-          <p>Choice {{num}}</p>
-          <input class="choicetext" type="text" placeholder="Choice text" value="{{desc}}"></input>
-          <input class="choicevalue" type="text" placeholder="Choice value" value="{{value}}"></input>
-          <div>
-            <button class="deletechoice btn">Delete Choice</button>
-          </div>
+        <div class="editorchoice inset" num="{{num}}">
+          <a href="#" class="rightflushicon deletechoice action"><i class="icon-remove"></i></a>
+          <label>Choice {{num}}</label>
+          <input class="choicetext input-text" type="text" placeholder="Choice text" value="{{desc}}"></input>
+          <input class="choicevalue input-text" type="text" placeholder="Choice value" value="{{value}}"></input>
         </div>
       {{/each}}
+      <!-- FIXME: url highlighting here looks weird -->
+      <a href="#" class="addchoice action"><i class="icon-new"></i>Add Another Choice</a>
     {{/if}}
-    <div>
-      <label class="checkbox">
-        Optional <input type="checkbox" class="optional"></input>
-      </label>
-    </div>
-    <div>
-      <button class="deletequestion btn">Delete Question</button>
-    </div>
   </div>
 </template>
