Use named routes instead of urls

--- a/client/quantidian.html
+++ b/client/quantidian.html
@@ -38,7 +38,7 @@
         </a>
       </li>
       <li>
-        <a href="/editor" class="action" title="Editor">
+        <a href="{{editorUrl}}" class="action" title="Editor">
           <i class="icon-edit"></i>
         </a>
       </li>
