--- a/client/quantidian.html
+++ b/client/quantidian.html
@@ -43,7 +43,7 @@
         </a>
       </li>
       <li>
-        <a href="/logs" class="action" title="Logs">
+        <a href="{{logsUrl}}" class="action" title="Logs">
           <i class="icon-view-as-list"></i> </a>
       </li>
     </ul>
