--- a/client/quantidian.html
+++ b/client/quantidian.html
@@ -33,8 +33,8 @@
     {{/if}}
     <ul class="actions pull-right">
       <li>
-        <a href="/subscribe" class="action" title="Subscriptions">
-          <i class="icon-new"></i>
+        <a href="{{subscribeUrl}}" class="action" title="Subscriptions">
+          <i class="icon-add-to-queue"></i>
         </a>
       </li>
       <li>
@@ -51,6 +51,7 @@
 </template>
 
 <template name="main">
+  <!-- FIXME: Show some more helpful startup screen when no subscriptions -->
   {{#each subscribed}}
     <a href="/category/{{_id}}">
       <button type="button" class="btn btn-block">{{name}}</button>
