Add settings page

--- a/client/quantidian.html
+++ b/client/quantidian.html
@@ -44,7 +44,13 @@
       </li>
       <li>
         <a href="{{logsUrl}}" class="action" title="Logs">
-          <i class="icon-view-as-list"></i> </a>
+          <i class="icon-view-as-list"></i>
+        </a>
+      </li>
+      <li>
+        <a href="{{settingsUrl}}" class="action" title="Settings">
+          <i class="icon-settings"></i>
+        </a>
       </li>
     </ul>
   </header>
