Prevent action bar overflow
The click handling in fries doesn't work with meteor-router.

--- a/client/quantidian.html
+++ b/client/quantidian.html
@@ -31,7 +31,7 @@
     {{else}}
       <h1 class="title">{{title}}</h1>
     {{/if}}
-    <ul class="actions pull-right">
+    <ul class="actions pull-right" data-overflow="false">
       <li>
         <a href="{{subscribeUrl}}" class="action" title="Subscriptions">
           <i class="icon-add-to-queue"></i>
