Fix category page running off right edge

--- a/client/quantidian.html
+++ b/client/quantidian.html
@@ -69,7 +69,7 @@
 
 <template name="category">
   {{#with categoryObj}}
-    <div class="form-flex inset">
+    <div class="inset">
       <p>{{longdesc}}</p>
       {{#each questions}}
         <label>{{label}}</label>
