Fix missing angle bracket in quantidian.html

--- a/client/quantidian.html
+++ b/client/quantidian.html
@@ -81,7 +81,7 @@
           </div>
         {{/if}}
         {{#if typeIs "text"}}
-          <input class="input-text userinput active" type="text" placeholder="Enter some text"</input>
+          <input class="input-text userinput active" type="text" placeholder="Enter some text"></input>
         {{/if}}
       {{/each}}
       <div class="form-actions">
