Consolidate log line html

--- a/client/logs.html
+++ b/client/logs.html
@@ -19,10 +19,7 @@ limitations under the License.
     <ul class="list inset">
       <li class="list-divider">Recent logs</li>
       {{#each recentLogs}}
-        <li class="list-item-single-line">
-          {{stringifyLog}}
-          ({{timeago timestamp}})
-        </li>
+        {{> logLine}}
       {{/each}}
     </ul>
   {{/if}}
@@ -33,10 +30,7 @@ limitations under the License.
     <ul class="list inset">
       <li class="list-divider">Recent logs from this category</li>
       {{#each recentLogs}}
-        <li class="list-item-single-line">
-          {{stringifyLog}}
-          ({{timeago timestamp}})
-        </li>
+        {{> logLineJustValue}}
       {{/each}}
     </ul>
   {{/if}}
@@ -45,10 +39,21 @@ limitations under the License.
 <template name="logs">
   <ul class="list inset">
     {{#each allLogs}}
-      <li class="list-item-single-line">
-        {{stringifyLog}}
-        ({{timeago timestamp}})
-      </li>
+      {{> logLine}}
     {{/each}}
   </ul>
+</template>
+
+<template name="logLine">
+  <li class="list-item-single-line">
+    {{stringifyLog}}
+    ({{timeago timestamp}})
+  </li>
+</template>
+
+<template name="logLineJustValue">
+  <li class="list-item-single-line">
+    {{stringifyLog}}
+    ({{timeago timestamp}})
+  </li>
 </template>
